--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body{
 <div class="hero">
 
   <div class="profile-picture">
-    <img src="https://github.com/mrxsetup/KING_MAKER_PREDICTION/blob/main/KINGMAKERSOUTH.jpg?raw=true">
+    <img src="https://github.com/mrxsetup/GAMECHANGER/blob/main/GAMECHANGERJPG.jpeg?raw=true">
   </div>
 
   <h1 class="heading1">🔥 GAME CHANGER 🔥</h1>
