--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ body{
   </div>
 
   <div class="ads-credit">
-    <a href="https://t.me/CAPTAIN4433" target="_blank">
-      ADS SETUP BY – @CAPTAIN4433
+    <a href="https://t.me/mrxsetup" target="_blank">
+      ADS SETUP BY – @mrxsetup
     </a>
   </div>
 
@@ -168,3 +168,4 @@ requestAnimationFrame(animate);
 
 </body>
 </html>
+
