--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
-<!-- META PIXEL -->
+<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){
 if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -29,6 +29,7 @@ fbq('track','PageView');
 <img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=2277782586066757&ev=PageView&noscript=1"/>
 </noscript>
+<!-- End Meta Pixel Code -->
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Open Sans',sans-serif;}
@@ -47,7 +48,7 @@ body{
   box-shadow:0 0 40px rgba(0,212,255,.4);
   background:
     linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)),
-    url("https://github.com/mrxsetup/AKCRICKETTRADERTM/blob/main/AKNEWLOGOCOLOR.jpg?raw=true");
+    url("https://github.com/mrxsetup/GAMECHANGER/blob/main/GAMECHANGERJPG.jpeg?raw=true");
   background-size:cover;
   background-position:center;
 }
@@ -108,6 +109,7 @@ body{
 }
 </style>
 </head>
+
 <body>
 
 <div class="hero">
@@ -168,4 +170,3 @@ requestAnimationFrame(animate);
 
 </body>
 </html>
-
